i think i fixed the font

--- a/index.html
+++ b/index.html
@@ -1553,10 +1553,10 @@ However, one issue I will face is that not all the Arab states were included in 
 <span>      <span class='va'>COUNTRY</span> <span class='op'>==</span> <span class='st'>"(1) 1. Algeria"</span> <span class='op'>~</span> <span class='st'>"Algeria"</span>, </span>
 <span>      <span class='va'>COUNTRY</span> <span class='op'>==</span> <span class='st'>"(5) 5. Egypt"</span> <span class='op'>~</span> <span class='st'>"Egypt"</span>, </span>
 <span>      <span class='va'>COUNTRY</span> <span class='op'>==</span><span class='st'>"(7) 7. Iraq"</span> <span class='op'>~</span> <span class='st'>"Iraq"</span>,</span>
+<span>      <span class='va'>COUNTRY</span> <span class='op'>==</span> <span class='st'>"(17) 17. Saudi Arabia"</span> <span class='op'>~</span> <span class='st'>"Saudi Arabia"</span>, </span>
 <span>      <span class='va'>COUNTRY</span> <span class='op'>==</span> <span class='st'>"(8) 8. Jordan"</span> <span class='op'>~</span> <span class='st'>"Jordan"</span>,</span>
 <span>      <span class='va'>COUNTRY</span> <span class='op'>==</span> <span class='st'>"(10) 10. Lebanon"</span> <span class='op'>~</span> <span class='st'>"Lebanon"</span>, </span>
 <span>      <span class='va'>COUNTRY</span> <span class='op'>==</span> <span class='st'>"(15) 15. Palestine"</span> <span class='op'>~</span> <span class='st'>"Palestine"</span>, </span>
-<span>      <span class='va'>COUNTRY</span> <span class='op'>==</span> <span class='st'>"(17) 17. Saudi Arabia"</span> <span class='op'>~</span> <span class='st'>"Saudi Arabia"</span>, </span>
 <span>      <span class='va'>COUNTRY</span> <span class='op'>==</span> <span class='st'>"(19) 19. Sudan"</span> <span class='op'>~</span> <span class='st'>"Sudan"</span>,</span>
 <span>      <span class='va'>COUNTRY</span> <span class='op'>==</span> <span class='st'>"(21) 21. Tunisia"</span> <span class='op'>~</span> <span class='st'>"Tunisia"</span>, </span>
 <span>      <span class='va'>COUNTRY</span> <span class='op'>==</span> <span class='st'>"(22) 22. Yemen"</span> <span class='op'>~</span> <span class='st'>"Yemen"</span></span>
@@ -1572,7 +1572,7 @@ However, one issue I will face is that not all the Arab states were included in 
 <span><span class='st'>       (1 being the most optimistic and 5 being the least optimistic)"</span>,</span>
 <span>       title <span class='op'>=</span> <span class='st'>"Mean of Economic Optimism over the Next 3-5 Years in Arab Countries"</span>,</span>
 <span>       subtitle <span class='op'>=</span> <span class='st'>"Source: Arab Barometer: Public Opinion Survey 2006-2009"</span><span class='op'>)</span><span class='op'>+</span></span>
-<span>  <span class='fu'><a href='https://ggplot2.tidyverse.org/reference/theme.html'>theme</a></span><span class='op'>(</span>axis.text <span class='op'>=</span> <span class='fu'><a href='https://ggplot2.tidyverse.org/reference/element.html'>element_text</a></span><span class='op'>(</span>size <span class='op'>=</span> <span class='fl'>8</span><span class='op'>)</span><span class='op'>)</span></span></code></pre>
+<span>  <span class='fu'><a href='https://ggplot2.tidyverse.org/reference/theme.html'>theme</a></span><span class='op'>(</span>text <span class='op'>=</span> <span class='fu'><a href='https://ggplot2.tidyverse.org/reference/element.html'>element_text</a></span><span class='op'>(</span>size <span class='op'>=</span> <span class='fl'>9</span><span class='op'>)</span><span class='op'>)</span></span></code></pre>
 </div>
 <p><img src="index_files/figure-html5/unnamed-chunk-3-1.png" width="624" /></p>
 </div>
